# backlog-knowledge-packager

./: .gitignore  AGENTS.md
.claude/prompts/: create-issue.prompt.md  long-run.prompt.md  new-feature.prompt.md  review.prompt.md  ship.prompt.md  start.prompt.md  sync-main.prompt.md  test-check.prompt.md  update-skill.prompt.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/long-run/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.github/workflows/: python.yml
backlog-api-poc/: .env.example  client.py  document.py  main.py  pyproject.toml
backlog-knowledge-packager/: .env.example  .gitignore  README.md  pyproject.toml
backlog-knowledge-packager/src/backlog_packager/: __init__.py  apply.py  classifier.py  cli.py  client.py  config.py  models.py  normalizer.py  suggester.py  sync.py  verify.py  write_client.py
backlog-knowledge-packager/src/backlog_packager/collector/: __init__.py  documents.py  shared_files.py  wikis.py
backlog-knowledge-packager/src/backlog_packager/generator/: __init__.py  checklist.py  common.py  knowledge.py  onboarding.py  packager.py  references.py  source_indexes.py  warnings.py
backlog-knowledge-packager/tests/: test_apply.py  test_classifier.py  test_cli.py  test_client.py  test_collect_e2e.py  test_collector.py  test_config.py  test_normalizer.py  test_packager.py  test_phase2_generators.py  test_suggester.py  test_sync.py  test_verify.py
docs/: design.md  phase3_suggest_review.md  phase4_apply_boundary.md  phase4_operational_decisions.md  requirements.md
docs/test/: PHASE2_STATUS.md  TC_collect.md  TC_phase2.md
(+7 files in other folders)
