[project]
name = "backlog-knowledge-packager"
version = "0.1.0"
description = "Collects conventions, templates, and knowledge from Backlog (read-only) and packages them for AI ingestion and onboarding"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
backlog-packager = "backlog_packager.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backlog_packager"]
